# m7math

./: .gitignore  README.md  configure.ac
include/: Makefile.am
include/m7math/: Makefile.am  affine2d.hh  affine3d.hh  eigen_solve.hh  gram_schmidt.hh  mat2.hh  mat3.hh  mat4.hh  math.hh  projection.hh  quat.hh  rotate.hh  rotate2d.hh  scale.hh  scale2d.hh  transform.hh  transform2d.hh  translate.hh  translate2d.hh  types.hh  vec2.hh  vec3.hh  vec4.hh
include/m7math/_internal/: Makefile.am  common.hh  mat_common.hh  vec_common.hh
