SUBDIRS = _internal

include_headers=affine2d.hh affine3d.hh\
		eigen_solve.hh\
		gram_schmidt.hh\
		vec2.hh vec3.hh vec4.hh\
		mat2.hh mat3.hh mat4.hh \
		math.hh\
		projection.hh quat.hh\
		rotate2d.hh rotate.hh\
		scale2d.hh scale.hh\
		translate2d.hh translate.hh\
		transform2d.hh transform.hh\
		types.hh

